fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
 .App {
 
 }
-body{
-    align-items: center;
 
+html {
+    width: 100%;
+    max-width: 100%;
+/*overflow-x: hidden;*/
 }
 
-.particles{
+body {
+    /*align-items: center;*/
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.particles {
     position: fixed !important;
-    top:0;
+    top: 0;
     right: 0;
     left: 0;
     bottom: 0;;
 }
 
-/*.particles {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    background-size: cover;*/
-/*    background-position: 50% 50%;*/
-/*    background-repeat: no-repeat;*/
-/*    width: auto;*/
-/*    height: 3200px;*/
-/*    z-index: -1;*/
-/*}*/
-@media (min-device-width:320px) {
+/*@media (min-device-width: 320px) {*/
 
-}
+/*}*/
 
