--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     /*height: 100vh;*/
     height: max-content;
     /*background-color: #1F1F20;*/
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-.container{
+.container {
     width: 80%;
     display: flex;
     justify-content: space-around;
@@ -15,13 +15,15 @@
     flex-wrap: wrap;
     margin: 170px 0;
 }
-.greeting{
+
+.greeting {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     text-align: left;
 }
-.greeting span:nth-child(1){
+
+.greeting span:nth-child(1) {
     font-size: 14px;
     color: #E0E0DF;
     font-family: Montserrat;
@@ -36,7 +38,8 @@
     position: relative;
     z-index: 0;
 }
-.greeting span:nth-child(2) span{
+
+.greeting span:nth-child(2) span {
     font-size: 40px;
     color: #FAFAFA;
     font-family: Montserrat;
@@ -46,43 +49,48 @@
 }
 
 
-.greeting span:nth-child(2) span:before{
+.greeting span:nth-child(2) span:before {
     content: "";
     width: 100%;
     height: 20px;
-    background:  #1D628A;
+    background: #1D628A;
     position: absolute;
     bottom: 0;
     z-index: -1;
 
 }
 
-.greeting h1:nth-child(3){
+.greeting h1:nth-child(3) {
     font-size: 24px;
     color: #E0E0DF;
     font-family: Montserrat;
     font-weight: 800;
 }
 
-.photo{
+.photo {
     position: relative;
     z-index: 1;
     margin-top: 50px;
 }
-.photo:hover{
+
+.photo:hover {
     transform: scale(1.1, 1.1);
     transition: .5s ease-in-out;
 }
-.photo div{
-    height: 50vh;
-    width: 270px;
+
+.photo div {
+    height: 340px;
+    width: 280px;
     background-image: url("banner.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.photo div:before{
+
+.photo div:before {
     content: "";
     position: absolute;
-    height: 53vh;
-    width: 260px;
+    height: 360px;
+    width: 280px;
     border: 5px solid #1D628A;
     left: 15px;
     top: -15px;
@@ -92,22 +100,32 @@
 
 
 @media screen and (max-width: 1172px) {
-    .main{
+    .main {
         height: 100%;
     }
-    .photo{
+
+    .photo {
         margin-bottom: 5%;
+        transform: none;
     }
 
-}
-@media screen and (max-width: 797px){
 
-    .greeting span:nth-child(2) span:before{
+}
+
+@media screen and (max-width: 797px) {
+
+    .greeting span:nth-child(2) span:before {
         display: none;
     }
-
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 375px) {
+    photo div:hover {
+        transform: none;
+    }
+
+    .photo div:before {
+        display: none;
+    }
 
 }
