--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-html,
+/*html,*/
+/*body {*/
+/*  background-color: #1f1f20;*/
+/*  margin: 0;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  -moz-osx-font-smoothing: grayscale;*/
+/*  font-family: 'Montserrat', sans-serif;*/
+/*  font-family: 'Noto Sans', sans-serif;*/
+/*}*/
+html {
+  width: 100%;
+  max-width: 100%;
+  /*overflow-x: hidden;*/
+}
 body {
   background-color: #1f1f20;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Noto Sans', sans-serif;
+    margin: 0;
+  /*align-items: center;*/
+  width: 100%;
+  max-width: 100%;
+  /*overflow-x: hidden;*/
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
